--- a/src/pages/pakker.astro
+++ b/src/pages/pakker.astro
@@ -1028,17 +1028,6 @@ import CTAButton from '../components/CTAButton.astro';
             tilbakemeldinger.
           </p>
         </div>
-
-        <!-- FAQ 4 -->
-        <div>
-          <h3 class="text-xl font-semibold text-gray-900 mb-4">
-            Hva skjer etter første år?
-          </h3>
-          <p class="text-gray-600">
-            Etter første år tilbyr vi fleksible vedlikeholdspakker fra 499
-            kr/måned som inkluderer hosting, sikkerhetskopier og support.
-          </p>
-        </div>
       </div>
     </div>
   </section>
@@ -1071,3 +1060,9 @@ import CTAButton from '../components/CTAButton.astro';
     </div>
   </section>
 </BaseLayout>
+
+<script>
+  function openCalendly() {
+    window.open('https://calendly.com/post-nettup/30min', '_blank');
+  }
+</script>
