Lagt inn google analytics

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -68,6 +68,11 @@
             class="hover:text-white transition-colors duration-200"
             >Personvern</a
           >
+          <a
+            href="/cookies"
+            class="hover:text-white transition-colors duration-200"
+            >Informasjonskapsler</a
+          >
         </div>
       </div>
     </div>
